{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 215,
  "lineage": "5140834f-d626-7b7b-114d-ef17381ab8f1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "dr_to_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-054aff40efb7605bf179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-054aff40efb7605bf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0a3f0966899646cc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.dr_private",
            "aws_vpc.dr",
            "aws_vpc.primary",
            "aws_vpc_peering_connection.primary_to_dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "primary_to_dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0982c7ba5984742ff3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0982c7ba5984742ff",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0a3f0966899646cc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.primary_private",
            "aws_vpc.dr",
            "aws_vpc.primary",
            "aws_vpc_peering_connection.primary_to_dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dr_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:342597974367:route-table/rtb-054aff40efb7605bf",
            "id": "rtb-054aff40efb7605bf",
            "owner_id": "342597974367",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0a3f0966899646cc2"
              }
            ],
            "tags": {
              "Environment": "test",
              "Name": "rds-dr-private-rt-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "rds-dr-private-rt-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e410461ea9b05e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "primary_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:route-table/rtb-0982c7ba5984742ff",
            "id": "rtb-0982c7ba5984742ff",
            "owner_id": "342597974367",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0a3f0966899646cc2"
              }
            ],
            "tags": {
              "Environment": "test",
              "Name": "rds-primary-private-rt-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "rds-primary-private-rt-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0263c30794a301df7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dr_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0106d365d0daa4b51",
            "route_table_id": "rtb-054aff40efb7605bf",
            "subnet_id": "subnet-0b53076408312300e"
          },
          "dependencies": [
            "aws_route_table.dr_private",
            "aws_subnet.dr_private_1",
            "aws_vpc.dr",
            "data.aws_availability_zones.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dr_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078ae31238fca7407",
            "route_table_id": "rtb-054aff40efb7605bf",
            "subnet_id": "subnet-06a552e6e3be34f8f"
          },
          "dependencies": [
            "aws_route_table.dr_private",
            "aws_subnet.dr_private_2",
            "aws_vpc.dr",
            "data.aws_availability_zones.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "primary_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010d267fc3ec152d6",
            "route_table_id": "rtb-0982c7ba5984742ff",
            "subnet_id": "subnet-0f7c9116ce9d40842"
          },
          "dependencies": [
            "aws_route_table.primary_private",
            "aws_subnet.primary_private_1",
            "aws_vpc.primary",
            "data.aws_availability_zones.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "primary_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea0c94411fd534f0",
            "route_table_id": "rtb-0982c7ba5984742ff",
            "subnet_id": "subnet-02f7cf87432e66073"
          },
          "dependencies": [
            "aws_route_table.primary_private",
            "aws_subnet.primary_private_2",
            "aws_vpc.primary",
            "data.aws_availability_zones.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dr_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:342597974367:security-group/sg-0d80845ef7249107e",
            "description": "Security group for DR RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d80845ef7249107e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16",
                  "10.0.0.0/16"
                ],
                "description": "PostgreSQL access from VPCs",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-dr-sg-qa-test",
            "name_prefix": "",
            "owner_id": "342597974367",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "Name": "rds-dr-sg-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "rds-dr-sg-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e410461ea9b05e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "primary_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:security-group/sg-0f8e9578911a60815",
            "description": "Security group for primary RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8e9578911a60815",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "10.1.0.0/16"
                ],
                "description": "PostgreSQL access from VPCs",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-primary-sg-qa-test",
            "name_prefix": "",
            "owner_id": "342597974367",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "Name": "rds-primary-sg-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "rds-primary-sg-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0263c30794a301df7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dr_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:342597974367:subnet/subnet-0b53076408312300e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b53076408312300e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "rds-dr-private-1-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "rds-dr-private-1-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            },
            "vpc_id": "vpc-07e410461ea9b05e8"
          },
          "dependencies": [
            "aws_vpc.dr",
            "data.aws_availability_zones.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dr_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:342597974367:subnet/subnet-06a552e6e3be34f8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a552e6e3be34f8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "rds-dr-private-2-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "rds-dr-private-2-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            },
            "vpc_id": "vpc-07e410461ea9b05e8"
          },
          "dependencies": [
            "aws_vpc.dr",
            "data.aws_availability_zones.dr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-0f7c9116ce9d40842",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7c9116ce9d40842",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "rds-primary-private-1-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "rds-primary-private-1-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            },
            "vpc_id": "vpc-0263c30794a301df7"
          },
          "dependencies": [
            "aws_vpc.primary",
            "data.aws_availability_zones.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-02f7cf87432e66073",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f7cf87432e66073",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test",
              "Name": "rds-primary-private-2-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "rds-primary-private-2-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            },
            "vpc_id": "vpc-0263c30794a301df7"
          },
          "dependencies": [
            "aws_vpc.primary",
            "data.aws_availability_zones.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:342597974367:vpc/vpc-07e410461ea9b05e8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0ab87e635ba1afe88",
            "default_route_table_id": "rtb-050a8ace6d4b665bb",
            "default_security_group_id": "sg-01db529be20ef8168",
            "dhcp_options_id": "dopt-0b2631f0c84fa4ba5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07e410461ea9b05e8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-050a8ace6d4b665bb",
            "owner_id": "342597974367",
            "tags": {
              "Environment": "test",
              "Name": "rds-dr-vpc-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "rds-dr-vpc-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:vpc/vpc-0263c30794a301df7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00886d16687c4cb0a",
            "default_route_table_id": "rtb-0f4984b2a96fbebe5",
            "default_security_group_id": "sg-07b9e7a44c34cc16b",
            "dhcp_options_id": "dopt-096ea572b45cebc14",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0263c30794a301df7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f4984b2a96fbebe5",
            "owner_id": "342597974367",
            "tags": {
              "Environment": "test",
              "Name": "rds-primary-vpc-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "rds-primary-vpc-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "primary_to_dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": false,
            "id": "pcx-0a3f0966899646cc2",
            "peer_owner_id": "342597974367",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-07e410461ea9b05e8",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Environment": "test",
              "Name": "rds-vpc-peering-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "rds-vpc-peering-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            },
            "vpc_id": "vpc-0263c30794a301df7"
          },
          "dependencies": [
            "aws_vpc.dr",
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "dr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0a3f0966899646cc2",
            "peer_owner_id": "342597974367",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-07e410461ea9b05e8",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Environment": "test",
              "Name": "rds-vpc-peering-accepter-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            },
            "tags_all": {
              "CostCenter": "Infrastructure",
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "rds-vpc-peering-accepter-qa-test",
              "Project": "RDS-DR",
              "Suffix": "qa-test"
            },
            "vpc_id": "vpc-0263c30794a301df7",
            "vpc_peering_connection_id": "pcx-0a3f0966899646cc2"
          },
          "dependencies": [
            "aws_vpc.dr",
            "aws_vpc.primary",
            "aws_vpc_peering_connection.primary_to_dr"
          ]
        }
      ]
    }
  ]
}